osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_imports_must_not_have_cycles/test_import_has_cycles.txt
error: import cycle detected here
--> bar.sml:2:14
     |
   2 | Import(rules=["baz.sml"])
     |               ^ this import results in a cyclic dependency
~~~ the import chain is displayed below:
--> (1) baz.sml:2:14
     |
   2 | Import(rules=["foo.sml"])
     |               ^
--> (2) foo.sml:2:14
     |
   2 | Import(rules=["bar.sml"])
     |               ^